# sciter-startup

./: .gitignore  CMakeLists.txt  bd.py  increasebn.bat  increasebn.sh  info.plist.in  mkvendor.py  pack.bat  packres.py  readme.md  resource.rc
src/: AppMain.cpp  CMakeLists.txt  CMakePresets.json  mainWnd.h  n8.manifest  resources.cpp  stdafx.h  vcpkg.json
src/res/: gallery.icns  info.plist  info.plist.in  resource.h  resource.h.in
src/ui/: default.htm  default.js  main.htm  main.js
